# my_trips_interface

./: CMakeLists.txt  README.md  create_db.sql  crud_operations.cpp  crud_operations.h  database.cpp  database.h  insert_db.sql  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  procedures_db.sql  qt_travel_crud  requests_db.sql
